--- a/css/index.css
+++ b/css/index.css
@@ -66,3 +66,19 @@ html, body {
 #copyrights {
 	font-size:10px;
 }
+
+#card {
+	width:750px !important;
+	box-shadow: 10px 10px 5px grey;
+	margin-left: auto;
+    margin-right: auto;
+}
+
+#leftside {
+	float:left;
+}
+
+#rightside {
+	float:right;
+}
+
